sbin/dump/dump.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: dump.h,v 1.58 2020/04/05 15:25:39 joerg Exp $	*/
+/*	$NetBSD: dump.h,v 1.59 2020/12/03 08:25:57 kre Exp $	*/
 
 /*-
  * Copyright (c) 1980, 1993
@@ -134,7 +134,7 @@ extern int	unlimited;	/* if set, write to end of medium */
 extern int	density;	/* density in 0.1" units */
 extern int	notify;		/* notify operator flag */
 extern int	timestamp;	/* timestamp messages */
-extern int	blockswritten;	/* number of blocks written on current tape */
+extern u_int64_t	blockswritten;	/* blocks written on current tape */
 extern int	tapeno;		/* current tape number */
 extern int	is_ufs2;
 
