sbin/dump/main.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.77 2020/04/05 15:25:39 joerg Exp $	*/
+/*	$NetBSD: main.c,v 1.78 2020/12/03 08:25:57 kre Exp $	*/
 
 /*-
  * Copyright (c) 1980, 1991, 1993, 1994
@@ -39,7 +39,7 @@ __COPYRIGHT("@(#) Copyright (c) 1980, 1991, 1993, 1994\
 #if 0
 static char sccsid[] = "@(#)main.c	8.6 (Berkeley) 5/1/95";
 #else
-__RCSID("$NetBSD: main.c,v 1.77 2020/04/05 15:25:39 joerg Exp $");
+__RCSID("$NetBSD: main.c,v 1.78 2020/12/03 08:25:57 kre Exp $");
 #endif
 #endif /* not lint */
 
@@ -108,7 +108,7 @@ int needswap;
 
 int	timestamp;		/* print message timestamps */
 int	notify;			/* notify operator flag */
-int	blockswritten;		/* number of blocks written on current tape */
+u_int64_t	blockswritten;	/* number of blocks written on current tape */
 int	tapeno;			/* current tape number */
 int	density;		/* density in bytes/0.1" */
 int	ntrec = NTREC;		/* # tape blocks in each tape record */
